@startuml
skinparam linetype polyline
skinparam linetype ortho

skinparam nodesep 100
skinparam ranksep 100

skinparam titleBorderRoundCorner 15
skinparam titleBorderThickness 2
skinparam titleBorderColor red
skinparam titleBackgroundColor Aqua-CadetBlue
skinparam TitleFontSize 40

title Appendix D - ControlScreen Class Composition Relations

class com.mygdx.game.game.screens.game.ControlScreen {
- String imgPath
- Texture texture
- SpriteBatch batch
- Main game
- CustomInputProcessor inputProcessor
- OrthographicCamera camera
- Button playButton
- float buttonShowDelay
- Timer.Task buttonShowTask
+ void show()
+ void render(float)
+ void resize(int,int)
+ void pause()
+ void resume()
+ void hide()
+ void dispose()
+ void play()
}

class com.mygdx.game.engine.input.CustomInputProcessor {
+ boolean mouseClicked(int)
+ boolean keyDown(int)
+ boolean keyUp(int)
+ boolean keyTyped(char)
+ boolean touchDown(int,int,int,int)
+ boolean touchUp(int,int,int,int)
+ boolean touchDragged(int,int,int)
+ boolean mouseMoved(int,int)
+ boolean scrolled(float,float)
+ boolean mouseHoverOver(T)
}

class com.mygdx.game.game.components.ui.Button {
- Main game
- Rectangle rectangle
- float x
- float y
- float width
- float height
- String name
- String imgPath
- Texture texture
- SpriteBatch batch
- boolean visibility
- Sprite sprite
- boolean active
+ Texture getTexture()
+ void setTexture(Texture)
+ SpriteBatch getBatch()
+ void setBatch(SpriteBatch)
+ Sprite getSprite()
+ void setSprite(Sprite)
+ boolean getVisibility()
+ void setVisibility(boolean)
+ boolean isActive()
+ void setActive(boolean)
+ void setButtonColor(Color)
+ float getX()
+ void setX(float)
+ float getY()
+ void setY(float)
+ float getWidth()
+ void setWidth(float)
+ float getHeight()
+ void setHeight(float)
+ String getName()
+ void setName(String)
+ Rectangle getBound()
}

com.mygdx.game.game.screens.game.ControlScreen *------ com.mygdx.game.engine.input.CustomInputProcessor :has
com.mygdx.game.game.screens.game.ControlScreen *------ com.mygdx.game.game.components.ui.Button :has
@enduml